Add tests for C++ skeleton project

--- a/project_skeleton/cpp_autotools/src/Makefile.am
+++ b/project_skeleton/cpp_autotools/src/Makefile.am
@@ -9,6 +9,11 @@ sources = \
  		  ../include/skeleton.h \
  		  ../include/skeleton_opts.h
 
+# Libraries for tests (set LIBRARY to prevent compiling main() block)
+check_LIBRARIES = libskeleton.a
+libskeleton_a_SOURCES = $(sources)
+libskeleton_a_CXXFLAGS = -DLIBRARY $(AM_CXXFLAGS)
+
 # ELF
 bin_PROGRAMS = skeleton
 skeleton_SOURCES = $(sources)
