--- a/project_skeleton/cpp_autotools/configure.ac
+++ b/project_skeleton/cpp_autotools/configure.ac
@@ -3,11 +3,13 @@ AC_INIT([skeleton], [0.0.1], [s.watts2@student.unimelb.edu.au])
 AM_INIT_AUTOMAKE([foreign -Wall -Werror subdir-objects])
 
 # Check out required programs and libraries
+AC_PROG_RANLIB
+AM_PROG_AR
 AC_PROG_CXX
 
 # Set config header output
 AC_CONFIG_HEADERS([config.h])
 
 # Declare Makefile outputs
-AC_CONFIG_FILES([Makefile src/Makefile])
+AC_CONFIG_FILES([Makefile src/Makefile tests/Makefile])
 AC_OUTPUT
